--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Note</title>
   </head>
-  <body>
+  <body class="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
